main data refetch + message overflow fix + no ads message

--- a/client/src/pages/AdsPage/AdsPage.css
+++ b/client/src/pages/AdsPage/AdsPage.css
@@ -64,3 +64,9 @@
     overflow-y: auto;
     height: 100%;
 }
+
+.ads-message-lonely {
+    padding: 0px 30px;
+    margin: auto auto;
+    text-align: center;
+}
